--- a/main.css
+++ b/main.css
@@ -2,6 +2,9 @@ body.dark {
   background-color: rgb(30,34,39);
   color: #fff;
 }
+img {
+  border-radius: 50%;
+}
 body.dark code[class*=language-],
 body.dark table tbody>tr:nth-child(odd)>td,
 body.dark table tbody>tr:nth-child(odd)>th {
